--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<p>I hope your day is amazing.</p><p>From Riff </p>
 				<p>Happy Birthday Syawla❤️‍🩹🩹</p>
       <p>
-<a href="https://replit.com/itsriff/OPEN-IT">Klik Ini</a>
+<a href="https://skyzez2140.github.io/Yntktsjj-/">Klik Ini</a>
       </p>
 	<div class="box">
 		<div class="cake">
